# kvasir

./: .gitignore  README.md  makefile  pyproject.toml  ruff.toml
.github/workflows/: eval.yml
docs/paper/: .gitignore  Makefile  README.md  bib.bib  draft.tex
docs/plos/: .gitignore  Makefile  bib.bib  draft.tex
docs/thesis/: .gitignore  Makefile  bibliography.bib  main.tex  plan.tex
docs/thesis/backmatter/: appendix.tex
docs/thesis/frontmatter/: abstract.tex  acknowledgements.tex  approval.tex  frontpage.tex
docs/thesis/setup/: preamble.tex  settings.tex  statics.tex
etc/: benchmarks.txt  evaluation.txt  experiments.txt  features.txt  related.txt  thoughts.txt  use-cases.txt
eval/: flatmap.hs
eval/ioccc/: Makefile  adder.c  primenum.c
eval/micro/: flatmap.hs  flatmap.js  package.json  rigiddb.js
eval/npm/append-string/: package.json
eval/npm/array-ify/: package.json
eval/npm/has-values/: package.json
eval/npm/is-nan/: package.json
eval/pypi/: left_pad.py  sliced.py  sources.txt  unique.py
eval/query/: c_ex1.pl  c_ex2.pl  min_len.pl  pure.pl  to_haskell.pl
eval/rosetta/: helloworld.py  median.c  median.hs  median.js  median.py  readfile.c  readfile.hs  readfile.js  readfile.py  rot13.c  rot13.hs  rot13.js  rot13.py  sources.txt
kvasir/: cli.py  hooks.py  logic.py  plugins.py  program.py  query.py  synth.py  utils.py
kvasir/default_plugins/: inputs.py  js2hs.py  len.py  outputs.py  program_js.py  signature.py  syscall_trace.py
paper/: .gitignore  LICENSE  Makefile  bib.bib  draft.tex
scripts/: eval.sh  naivellm.py
(+32 files in other folders)
