[project]
name = "kvasir"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Evangelos Lamprou", email = "vagos@lamprou.xyz"}
]

classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "pluggy>=1.0",
    "click>=7.0",
]

[tool.setuptools]
packages = ["kvasir"]

[project.scripts]
kvasir = "kvasir.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "ruff",
    "black",
    "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
